[package]
name = "configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
diffy = "0.3.0"
file_diff = "1.0.0"
home = "0.5.4"
inquire = "0.5.2"
permissions = "0.4.1"
sudo = "0.6.0"
walkdir = "2.3.2"
